<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriangleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangleTitle"
            android:textSize="30sp"
            android:layout_marginVertical="50dp"/>
        <EditText
            android:id="@+id/height"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/triangleHint1"/>
        <EditText
            android:id="@+id/base"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/triangleHint2"/>
        <Button
            android:id="@+id/triangleProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proses"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>