<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".CircleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circleTitle"
        android:textSize="30sp"
        android:layout_marginVertical="50dp"/>

    <EditText
        android:id="@+id/radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/circleHint"/>

    <Button
        android:id="@+id/circleProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proses" />

</LinearLayout>