<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btnCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle"/>

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"/>

        <Button
            android:id="@+id/btnTriangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>